docs/src/global.css
html {
  scrollbar-gutter: stable;
}

.prose > pre,
.code-override .bx--snippet {
  color-scheme: dark;
  max-width: none;
}

/* Light themes use light color scheme */
[theme="white"] .prose > pre,
[theme="g10"] .prose > pre,
[theme="white"] .code-override .bx--snippet,
[theme="g10"] .code-override .bx--snippet {
  color-scheme: light;
}

.prose > pre {
  padding: 1rem;
  margin-bottom: 1rem;
  overflow: auto;
}

.prose > pre,
.code-override {
  border: 1px solid var(--cds-ui-03);
}

/* Dark theme code block styles (default for g80, g90, g100) */
.prose > pre,
.code-override .bx--copy-btn,
.code-override .bx--snippet,
.code-override button.bx--btn.bx--snippet-btn--expand {
  background-color: var(--cds-ui-background);
  color: #f4f4f4;
}

.code-override .bx--copy-btn:hover,
.code-override button.bx--btn.bx--snippet-btn--expand:hover {
  background-color: #393939;
}

.code-override .bx--snippet__icon {
  fill: #f4f4f4;
}

/* Light theme code block styles (white, g10) */
[theme="white"] .prose > pre,
[theme="g10"] .prose > pre,
[theme="white"] .code-override .bx--copy-btn,
[theme="g10"] .code-override .bx--copy-btn,
[theme="white"] .code-override .bx--snippet,
[theme="g10"] .code-override .bx--snippet,
[theme="white"] button.bx--btn.bx--snippet-btn--expand,
[theme="g10"] button.bx--btn.bx--snippet-btn--expand {
  background-color: var(--cds-ui-background);
  color: var(--cds-text-01, #161616);
}

[theme="white"] .code-override .bx--copy-btn:hover,
[theme="g10"] .code-override .bx--copy-btn:hover,
[theme="white"] button.bx--btn.bx--snippet-btn--expand:hover,
[theme="g10"] button.bx--btn.bx--snippet-btn--expand:hover {
  background-color: var(--cds-field-hover-01, #e8e8e8);
}

[theme="white"] .code-override .bx--snippet__icon,
[theme="g10"] .code-override .bx--snippet__icon {
  fill: var(--cds-icon-01, #161616);
}

.prose > pre,
.code-override .bx--snippet-container pre {
  font-size: var(--cds-code-01-font-size);
  line-height: var(--cds-code-01-line-height);
  letter-spacing: var(--cds-code-01-letter-spacing);
  cursor: text;
}

.code-override .bx--snippet--multi .bx--snippet-container pre {
  overflow-x: auto;
}

/* Addig this to the layout grid fixes overstretching. */
.fix-overflow {
  min-width: 0;
}

.token.tag,
.token.operator {
  color: #6ea6ff;
}

/* Light theme inline code background */
[theme="white"] .code-override-inline,
[theme="g10"] .code-override-inline {
  background-color: var(--cds-field-01, #f4f4f4);
}

/** Gray 80 is the "lighted" dark theme. Ensure the background is dark. */
[theme="g80"] .code-override,
[theme="g80"] .code-override-inline {
  background-color: var(--cds-ui-background);
}

.token.builtin,
.token.attr-name {
  color: #3ddbd9; /* teal 30 */
}

.token.function {
  color: #9ef0f0;
}

.token.token.language-javascript,
.token.attr-value {
  color: #d4bbff; /* purple 30 */
}

.token.keyword {
  color: #bb8eff;
}

.token.punctuation {
  color: #a8a8a8; /* gray 40 */
}

.token.script .token.language-javascript {
  color: #3ddbd9; /* teal 30 */
}

.token.string {
  color: #fa75a6;
}

.token.boolean {
  color: #bb8eff;
}

.token.number {
  color: #a7f0ba;
}

.token.comment {
  color: #bebebe;
}

/* Light theme syntax highlighting (white, g10) */
[theme="white"] .token.tag,
[theme="g10"] .token.tag,
[theme="white"] .token.operator,
[theme="g10"] .token.operator {
  color: #0043ce; /* blue 70 */
}

[theme="white"] .token.builtin,
[theme="g10"] .token.builtin,
[theme="white"] .token.attr-name,
[theme="g10"] .token.attr-name {
  color: #005d5d; /* teal 70 */
}

[theme="white"] .token.function,
[theme="g10"] .token.function {
  color: #007d79; /* teal 60 */
}

[theme="white"] .token.token.language-javascript,
[theme="g10"] .token.token.language-javascript,
[theme="white"] .token.attr-value,
[theme="g10"] .token.attr-value {
  color: #8a3ffc; /* purple 60 */
}

[theme="white"] .token.keyword,
[theme="g10"] .token.keyword {
  color: #6929c4; /* purple 70 */
}

[theme="white"] .token.punctuation,
[theme="g10"] .token.punctuation {
  color: #525252; /* gray 70 */
}

[theme="white"] .token.script .token.language-javascript,
[theme="g10"] .token.script .token.language-javascript {
  color: #005d5d; /* teal 70 */
}

[theme="white"] .token.string,
[theme="g10"] .token.string {
  color: #9f1853; /* magenta 70 */
}

[theme="white"] .token.boolean,
[theme="g10"] .token.boolean {
  color: #6929c4; /* purple 70 */
}

[theme="white"] .token.number,
[theme="g10"] .token.number {
  color: #0e6027; /* green 70 */
}

[theme="white"] .token.comment,
[theme="g10"] .token.comment {
  color: #6f6f6f; /* gray 60 */
}

.override-tabs a.bx--tabs__nav-link,
.override-tabs a.bx--tabs__nav-link:focus,
.override-tabs a.bx--tabs__nav-link:active {
  width: auto !important;
}

/*
 * Main content needs to supersede z-index of SideNav but not that of the Header.
 * UI Shell Header shares the same z-index.
 */
[aria-label="Navigation"] {
  z-index: 10000;
}

[aria-label="Navigation"] ~ [data-components] {
  z-index: calc(8000 + 1);
}

@media (max-width: 65.98rem) {
  [aria-label="Navigation"] ~ [data-components] {
    z-index: 1;
  }
}

.prose > p > .bx--link {
  font-size: inherit;
  text-decoration: underline;
}

.prose .toc {
  margin-bottom: var(--cds-layout-01);
}

.table {
  position: sticky;
  max-height: calc(100vh - 3rem);
  top: 3rem;
  margin-top: -3rem;
  padding-top: var(--cds-spacing-05);
  padding-bottom: var(--cds-spacing-05);
  padding-left: var(--cds-spacing-08);
  overflow-y: auto;
}

[data-components] {
  position: relative;
  display: flex;
}

[data-components] .bx--grid {
  width: 100%;
}

@media (max-width: 1056px) {
  .table {
    display: none;
  }
}

.preview-viewer > .bx--aspect-ratio {
  outline: 1px solid var(--cds-interactive-04);
}

[data-component="Popover"] .preview-viewer > div:not(.bx--stack),
[data-component="Stack"] .preview-viewer .bx--stack > * {
  padding: 0.125rem 0.25rem;
  outline: 1px solid var(--cds-interactive-04);
}

[data-component="Popover"] .preview-viewer > div:not(.bx--stack),
[data-component="Popover"] .preview-viewer > .bx--stack > div {
  position: relative;
  padding: 0.125rem 0.25rem;
  outline: 1px solid var(--cds-interactive-04);
}

[data-component="Popover"] .preview-viewer .bx--popover-contents {
  padding: var(--cds-spacing-03);
}

#select-theme {
  width: auto;
}

.code-01 {
  font-size: var(--cds-code-01-font-size);
  font-weight: var(--cds-code-01-font-weight);
  letter-spacing: var(--cds-code-01-letter-spacing);
  line-height: var(--cds-code-01-line-height);
}

.body-short-01 {
  font-size: var(--cds-body-short-01-font-size);
  font-weight: var(--cds-body-short-01-font-weight);
  letter-spacing: var(--cds-body-short-01-letter-spacing);
  line-height: var(--cds-body-short-01-line-height);
}

.bx--col > h1 {
  font-size: var(--cds-expressive-heading-05-font-size);
  font-weight: var(--cds-expressive-heading-05-font-weight);
  letter-spacing: var(--cds-expressive-heading-05-letter-spacing);
  line-height: var(--cds-expressive-heading-05-line-height);
  margin-bottom: var(--cds-layout-01);
}

.big-paragraph {
  font-size: var(--cds-expressive-heading-03-font-size);
  font-weight: var(--cds-expressive-heading-03-font-weight);
  letter-spacing: var(--cds-expressive-heading-03-letter-spacing);
  line-height: var(--cds-expressive-heading-03-line-height);
  margin-top: var(--cds-layout-03);
  margin-bottom: var(--cds-layout-06);
}

.big-link,
.bx--col > .big-paragraph > code {
  font-size: var(--cds-expressive-heading-03-font-size);
  font-weight: var(--cds-expressive-heading-03-font-weight);
  letter-spacing: var(--cds-expressive-heading-03-letter-spacing);
  line-height: var(--cds-expressive-heading-03-line-height);
}

.bx--col > p {
  max-width: 44rem;
}

.bx--col > p > code,
.bx--col > ul > li > code,
.bx--col > ol > li > code {
  font-family: var(--cds-code-01-font-family);
  font-size: var(--cds-code-01-font-size, 0.75rem);
  font-weight: 500;
  letter-spacing: var(--cds-code-01-letter-spacing, 0.32px);
  padding: 0 var(--cds-spacing-02);
  color: var(--cds-text-01, #161616);
  border: 2px solid rgba(0, 0, 0, 0);
  background-color: var(--cds-field-01, #f4f4f4);
  border-radius: 4px;
}

[class*="bx--col"] > h2,
.bx--tab-content > h2 {
  font-size: var(--cds-expressive-heading-04-font-size);
  font-weight: var(--cds-expressive-heading-04-font-weight);
  letter-spacing: var(--cds-expressive-heading-04-letter-spacing);
  line-height: var(--cds-expressive-heading-04-line-height);
  padding-top: var(--cds-layout-03);
  margin-bottom: var(--cds-layout-01);
}

.bx--col > h4 {
  font-size: var(--cds-expressive-heading-02-font-size);
  font-weight: var(--cds-expressive-heading-02-font-weight);
  letter-spacing: var(--cds-expressive-heading-02-letter-spacing);
  line-height: var(--cds-expressive-heading-02-line-height);
  padding-top: var(--cds-layout-04);
  margin-bottom: var(--cds-layout-01);
}

.bx--col > h2,
.bx--tab-content > h2,
.bx--col > h3,
.bx--col > h4 {
  scroll-margin-top: 3rem;
}

.bx--col > p,
.bx--col > ul,
.bx--col > ol {
  margin-bottom: var(--cds-layout-02);
}

/* Moved from ComponentApi.svelte - code snippet white-space */
.cell .bx--snippet--inline code,
.cell .bx--snippet--single pre,
.bx--snippet--inline code {
  white-space: pre-wrap !important;
}

